profile page - wip

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -88,6 +88,10 @@
      {% include "yabase/app/favoritesPage.mustache" %}
    </script>
 
+   <script type='text/html' id='profilePageTemplate'>
+     {% include "yabase/app/profilePage.mustache" %}
+   </script>
+
 {% endif %}
 
 {% endblock %}
