added winner page

--- a/yaapp/apps/yaweb/templates/yaweb/index.html
+++ b/yaapp/apps/yaweb/templates/yaweb/index.html
@@ -302,7 +302,7 @@ de styles et de nouveaux talents</td>
 <div id="puce3" class="puce" onclick="goToSlide(3)"></div>
 <div id="puce4" class="puce" onclick="goToSlide(4)"></div>
 </div>
-<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url elecsounds %}" class="boxed iframe">Elecsounds</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
+<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url elecsounds_winner %}" class="boxed iframe">Elecsounds</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
 
 
 </div>
