--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_winner.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_winner.html
@@ -8,31 +8,9 @@
 <script type="text/javascript" src="/media/yaweb/js/unlightbox.js"></script>
 <link href="/media/yaweb/css/elecsounds.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
-<link rel="stylesheet" href="/media/css/style.css"/>
 <title>ElecSounds - Le gagnant est..</title>
 </head>
 <body>
-<div class='container-fluid'>
-
-    <div class='row-fluid'>
-        <div class='span12'>
-        <a href='#' id='logo'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
-        </div>
-    </div>
-
-    <div class='row-fluid'>
-        <div class='span12'>
-            <img src='/media/yaweb/images/elecsounds/elecsounds_2jours_medium.jpg' alt='Elecsounds medium logo'/>
-        </div>
-    </div>    
-    
-    <div class='row-fluid'>
-    
-    
-    <h2>A venir</h2>
-    
-    </div>
-
-</div>
+<img src='/media/yaweb/images/elecsounds/elecsounds_winner.jpg' alt='Elecsounds winner'/>
 </body>
 </html>
