--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_winner.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_winner.html
@@ -11,6 +11,10 @@
 <title>ElecSounds - Le gagnant est..</title>
 </head>
 <body>
-<img src='/media/yaweb/images/elecsounds/elecsounds_winner.jpg' alt='Elecsounds winner'/>
+<img src="/media/yaweb/images/elecsounds/elecsounds_winner.jpg" alt="Le gagnant Elecsounds" usemap="#Map" />
+<map name="Map" id="Map">
+  <area shape="rect" coords="241,231,306,248" href="https://twitter.com/#!/YasoundSAS" target="_blank" alt="Twitter" />
+  <area shape="rect" coords="351,232,434,247" href="https://www.facebook.com/Yasound" target="_blank" alt="Facebook" />
+</map>
 </body>
 </html>
