added press release & reviews

--- a/yaapp/apps/yaweb/templates/yaweb/press.html
+++ b/yaapp/apps/yaweb/templates/yaweb/press.html
@@ -57,6 +57,17 @@
 					<td width="220" height="200" align="center" valign="middle"><br /></td>
 				</tr>
 			</table>
+            <h3>{% trans "Press Releases" %}</h3>
+            <ul>
+                <li><a href="{% url download 'media/yaweb/presse/releases/1_corpo.pdf' %}">{% trans "Corporate" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/releases/2_app_launch.pdf' %}">{% trans "Launch" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/releases/3_new_version_twitter.pdf' %}">{% trans "New version" %}</a></li>
+            </ul>
+            <h3>{% trans "Press Reviews" %}</h3>
+            <ul>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201204_review_press_fr.pdf' %}">{% trans "Press review (march 2012)" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201204_review_blogs_fr.pdf' %}">{% trans "Weblogs review (march 2012)" %}</a></li>
+            </ul>
 			<p>&nbsp;</p>
 		</div>
 		<div id="rouge" style="left: 853px;">
