added partnership on contact page

--- a/yaapp/apps/yaweb/templates/yaweb/contact.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contact.html
@@ -23,6 +23,13 @@
 					//
 				</script>
 			</p>
+            <h3>{% trans "Partnerships" %}</h3>
+            <p style="margin-left: 20px">
+				<script type="text/javascript"><!--
+				var etrdfse = ['m','t','n','s','e','d','r','o','<','a','i','o','"','s','o','a','c','s','l','=','n','l','t','s','a','d','a','t','a','>','.','a','r','i','a','o','h','m','<','y','@','t','u','a','a','a','/','a','y','t','e','>','n','"',' ','a',':','i','r','@','p','.','a','"','p','n','o','m','"',' ','i','c','r','e','c','r','m','l','u','f','=','e'];var rshddok = [9,19,60,30,48,34,23,76,0,17,63,31,8,44,37,80,41,69,42,46,72,12,26,45,25,73,22,58,50,54,74,29,57,24,68,14,3,49,78,67,27,13,32,43,61,10,79,1,28,65,20,81,33,53,2,56,15,51,4,66,16,35,64,39,55,21,70,77,47,40,11,36,62,59,75,18,38,52,71,6,7,5];var curpflv= new Array();for(var i=0;i<rshddok.length;i++){curpflv[rshddok[i]] = etrdfse[i]; }for(var i=0;i<curpflv.length;i++){document.write(curpflv[i]);}
+				// --></script>
+				<noscript>Please enable Javascript to see the email address</noscript>
+            </p>
 			<h3>Twitter</h3>
 			<p style="margin-left: 20px">
 				<a href="http://twitter.com/#!/YasoundSAS" target="_blank">@YasoundSAS</a>
