webapp - wip on profile page
ugly profile page, missing favorites

--- a/yaapp/templates/yabase/app/radio/radioUser.mustache
+++ b/yaapp/templates/yabase/app/radio/radioUser.mustache
@@ -2,6 +2,6 @@
 <div class='user thumbnail'>
     <img src='<% picture %>' width='48px' height='48px'/>
     <div class='caption'>
-    <h5><% name %></h5>
+    <h5><a href='/app/profile/<% id %>/'><% name %></a></h5>
     </div>
 </div>
