--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -2,7 +2,7 @@
 <div class='wall-event-message'>
 <img src='<% user_picture %>' width='48px' height='48px'/>
 <div class='date'><% formatted_start_date %></div>
-<h2><a href='#'><% user_name %></a></h2>
+<h2><a href='/app/profile/<% id %>/'><% user_name %></a></h2>
 <p><% text %></p>
 <div class='clear'></div>
 </div>
