fixed own radio display

--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -4,7 +4,7 @@
 </div>
 <div class='span8'>
     <h2>{% trans "His Radio" %}</h2>
-    <div id='owner-radio'>
+    <div id='own-radio'>
     </div>
     <h2>{% trans "Current radio" %}</h2>
     <div id='current-radio'>
