added link to profile on radio

--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -3,7 +3,7 @@
        <img src="<% picture %>" width="256px" height="256px"/>
    </div>
    <div id='webapp-radio-title'>
-        <h1><% name %></h1>
+        <h1><a href='/app/profile/<%#creator%><% id %><%/creator%>/'><% name %></a></h1>
    <a class="btn" id='btn-favorite'>
     <i class="icon-star-empty"></i>
     {% trans 'Add to favorite' %}
