--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -2,7 +2,7 @@
 <div class='wall-event-message alert alert-success'>
 <img src='/media/images/like.png'  width='32px' height='32px'/>
 <div class='date'><% formatted_start_date %></div>
-<h2><a href='/app/profile/<% id %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
+<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
 <p><% text %></p>
 <div class='clear'></div>
 </div>
