--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -101,7 +101,8 @@ body {
 	margin-top:16px;
 }
 
-ul .radio-cell {
+ul .radio-cell
+,ul .user-cell {
     list-style: none;
 	width:148px;
 	float:left;
@@ -110,13 +111,16 @@ ul .radio-cell {
 	margin-bottom:12px;
 }
 
-ul .radio-cell img {
+ul .radio-cell img
+,ul .user-cell img {
 	margin-top:12px;
 }
 
-ul .radio-cell .thumbnail:hover {
+ul .radio-cell .thumbnail:hover
+,ul .user-cell .thumbnail:hover {
 	background-color: #efefef;
 }
-ul .radio-cell .caption h5 {
+ul .radio-cell .caption h5
+,ul .user-cell .caption h5 {
 	text-align: center;
 }
