--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -83,6 +83,10 @@
      {% include "yabase/app/radioCell.mustache" %}
    </script>
 
+   <script type='text/html' id='userCellTemplate'>
+     {% include "yabase/app/userCell.mustache" %}
+   </script>
+
    <script type='text/html' id='searchPageTemplate'>
      {% include "yabase/app/searchPage.mustache" %}
    </script>
@@ -91,6 +95,10 @@
 {% if request.user.is_authenticated %}
    <script type='text/html' id='favoritesPageTemplate'>
      {% include "yabase/app/favoritesPage.mustache" %}
+   </script>
+
+   <script type='text/html' id='friendsPageTemplate'>
+     {% include "yabase/app/friends/friendsPage.mustache" %}
    </script>
 
    <script type="text/html" id="wallInputTemplate">
@@ -143,7 +151,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="{% url webapp_radio user_uuid %}" id='btn-my-radio' yasound:uuid='{{ user_uuid }}'>{% trans "My radio" %}</a></li>
 							<li><a href="{% url webapp_favorites %}" id='btn-favorites'>{% trans "My favorites" %}</a></li>
-							<li><a href="#">{% trans "My friends" %}</a></li>
+							<li><a href="{% url webapp_friends %}" id='btn-friends'>{% trans "My friends" %}</a></li>
 	                        <li class="divider"></li>
     						<li><a href="{% url logout %}">{% trans "Logout" %}</a></li>
 						</ul>
