webapp - homepage : basic layout

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -91,6 +91,9 @@
      {% include "yabase/app/searchPage.mustache" %}
    </script>
 
+   <script type='text/html' id='homePageTemplate'>
+     {% include "yabase/app/home/homePage.mustache" %}
+   </script>
 
 {% if request.user.is_authenticated %}
    <script type='text/html' id='favoritesPageTemplate'>
