webapp : add link to homepage
webapp homepage is displayed when user click on logo

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -141,7 +141,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-            <a href='/' class='brand'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+            <a href='{% url webapp %}' id='btn-webapp' class='brand'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
                         
           <div class="nav-collapse">
             <div class='pull-right'>
