--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -3,19 +3,23 @@
     <div class='span12'>
         <h1>Homepage</h1>
     </div>
+</div>    
+
+<div class='row-fluid'>
     <div class='span12'>
         <h2>Selection</h2>
         <ul id='selected-radios'></ul>
     </div>
-    
+</div>    
+<div class='row-fluid'>
     <div class='span12'>
         <h2>Most active radios</h2>
         <ul id='most-active-radios'></ul>
     </div>
-
+</div>
+<div class='row-fluid'>
     <div class='span12'>
         <h2>Favorites</h2>
         <ul id='favorites'></ul>
     </div>
-
 </div>
