--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -142,7 +142,7 @@
       <div class="navbar-inner">
         <div class="container-fluid">
             <a href='{% url webapp %}' id='btn-webapp' class='brand'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
-                        
+          
           <div class="nav-collapse">
             <div class='pull-right'>
                 <div class="btn-group " id='user-menu'>            
@@ -175,6 +175,16 @@
             <div id='webapp-player'>
             </div>
             <div class='nav-collapse'>
+				<!-- AddThis Button BEGIN -->
+				<div class="addthis_toolbox addthis_default_style ">
+				<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+				<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+				<a class="addthis_counter addthis_pill_style"></a>
+				</div>
+				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f910520446e8625"></script>
+				<!-- AddThis Button END -->
+            
             </div>
         </div>
       </div>
