added loading mask

--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -1,6 +1,8 @@
 {% load i18n %}
 <div class='span12'>
     <h1>{% trans "My friends" %}</h1>
-    <ul id='results'></ul>
+    <ul id='results'>
+    <img class='loading-mask' src='/media/images/loading.gif'/>
+    </ul>
     <div id='pagination'></div>
 </div>
