--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -8,18 +8,24 @@
 <div class='row-fluid'>
     <div class='span12'>
         <h2>Selection</h2>
-        <ul id='selected-radios'></ul>
+        <ul id='selected-radios'>
+            <img class='loading-mask' src='/media/images/loading.gif'/>
+        </ul>
     </div>
 </div>    
 <div class='row-fluid'>
     <div class='span12'>
         <h2>Most active radios</h2>
-        <ul id='most-active-radios'></ul>
+        <ul id='most-active-radios'>
+            <img class='loading-mask' src='/media/images/loading.gif'/>
+        </ul>
     </div>
 </div>
 <div class='row-fluid'>
     <div class='span12'>
         <h2>Favorites</h2>
-        <ul id='favorites'></ul>
+        <ul id='favorites'>
+            <img class='loading-mask' src='/media/images/loading.gif'/>
+        </ul>
     </div>
 </div>
