webapp - added skeleton for settings page

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -108,6 +108,10 @@
    <script type="text/html" id="wallInputTemplate">
       {% include "yabase/app/radio/wallInput.mustache" %}
    </script>
+
+   <script type="text/html" id="settingsPageTemplate">
+      {% include "yabase/app/settings/settingsPage.mustache" %}
+   </script>
 {% endif %}
 
 {% endblock %}
