--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -191,7 +191,7 @@
 				<a class="addthis_counter addthis_pill_style"></a>
 				</div>
 				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f910520446e8625"></script>
+				<script type="text/javascript" src="https://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f910520446e8625"></script>
 				<!-- AddThis Button END -->
             
             </div>
