webapp - wip on settings page (not functional)

--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -2,5 +2,15 @@
 <div class='row-fluid'>
     <div class='span12'>
         <h1>Settings</h1>
+        
+        <form id='settings-radio-form' method='post'>{% csrf_token %}
+        <fieldset>
+            {{ settings_radio_form }}
+        </fieldset>
+        <br/>
+        <input type='hidden' name='action' value='radio'/>
+        <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+        </fieldset>
+        </form>
     </div>
 </div>    
