--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -163,6 +163,7 @@
 							{% if request.user.is_authenticated %}
 	                        <li class="divider"></li>
                             <li><a href="{% url webapp_profile request.user.username %}" id='btn-my-profile'>{% trans "My profile" %}</a></li>
+                            <li><a href="{% url webapp_settings %}" id='btn-settings'>{% trans "Settings" %}</a></li>
                             {% endif %}
                             <li class="divider"></li>
     						<li><a href="{% url logout %}">{% trans "Logout" %}</a></li>
