metrics : added new device notifications enabled

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -47,6 +47,14 @@
         </tr>
         <tr>
             <td>
+                {% trans "Device notifications activated" %}
+            </td>
+            <td>
+            {{device_notifications_activated}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
                 {% trans "Uploaded songs" %}
             </td>
             <td>
