radio ready ratio

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -31,10 +31,10 @@
         </tr>
         <tr>
             <td>
-                {% trans "Radio count (ready)" %}
+                {% trans "Ready Radio count" %}
             </td>
             <td>
-            {{ready_radio_count}} 
+            {{ready_radio_count}} ({{ ready_radio_ratio }}%)
             </td>
         </tr>
         <tr>
