--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -136,7 +136,7 @@
 
         <tr>
             <td>
-                {% trans "Songs used" %}
+                {% trans "Total songs (matched & unmatched)" %}
             </td>
             <td>
             {{song_metadata_count}} 
@@ -144,7 +144,7 @@
         </tr>
         <tr>
             <td>
-                {% trans "Unmatched songs" %}
+                {% trans "Unmatched songs (file not found on server)" %}
             </td>
             <td>
             {{unmatched_song_metadata_count}} 
