webapp: improved settings page

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -124,3 +124,10 @@ ul .radio-cell .caption h5
 ,ul .user-cell .caption h5 {
 	text-align: center;
 }
+
+#settings-user-form {
+}
+
+#settings-radio-form {
+}
+
