--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -2,15 +2,30 @@
 <div class='row-fluid'>
     <div class='span12'>
         <h1>Settings</h1>
-        
-        <form id='settings-radio-form' method='post'>{% csrf_token %}
-        <fieldset>
+    </div>
+ </div>
+
+<div class='row-fluid'>
+    <div class='span6'>
+        <form id='settings-user-form' enctype="multipart/form-data" class='form-horizontal well' method='post'>{% csrf_token %}
+            {{ settings_user_form }}
+            <div class="form-actions">
+                <input type='hidden' name='action' value='settings_user'/>
+                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+            </div>
+        </form>
+    </div>
+
+    <div class='span6'>
+
+        <form id='settings-radio-form' enctype="multipart/form-data" class='form-horizontal well' method='post'>{% csrf_token %}
             {{ settings_radio_form }}
-        </fieldset>
-        <br/>
-        <input type='hidden' name='action' value='radio'/>
-        <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-        </fieldset>
+            <div class="form-actions">
+                <input type='hidden' name='action' value='settings_radio'/>
+                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+            </div>
         </form>
     </div>
 </div>    
+
+
