webapp : pagination on favorites

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -125,9 +125,7 @@ ul .radio-cell .caption h5
 	text-align: center;
 }
 
-#settings-user-form {
+.cell-pagination {
+	float:left;
+	with: 148px;
 }
-
-#settings-radio-form {
-}
-
