pagination on favorites, friends & home views

--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -27,5 +27,6 @@
         <ul id='favorites'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
+        <div class='cell-pagination' id='pagination'></div>
     </div>
 </div>
