--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -4,5 +4,5 @@
     <ul id='results'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
-    <div id='pagination'></div>
+    <div class='cell-pagination' id='pagination'></div>
 </div>
