webapp: fixed profile page

--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -18,7 +18,6 @@
 <div class='span12'>
     <h2>{% trans "Favorites" %}</h2>
     <ul id='favorites'></ul>
-    </div>
-    <div id='pagination'></div>
+    <div class='cell-pagination' id='pagination'></div>
 </div>
 </div>
