--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class='user-cell thumbnail'>
+<div class='user-cell'>
     <img src='<% picture %>' width='100px' height='100px'/>
     <div class='caption'>
         <h5><% name %></h5>
