--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-   <div id='webapp-radio-picture' class='thumbnail'>
+   <div id='webapp-user-picture'>
        <img src="<% picture %>" width="256px" height="256px"/>
    </div>
    <div id='webapp-radio-title'>
