--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class='wall-event-message'>
-<img src='<% user_picture %>' width='48px' height='48px'/>
+<img class='user' src='<% user_picture %>' width='48px' height='48px'/>
 <div class='date'><% formatted_start_date %></div>
 <h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2>
 <p><% text %></p>
