--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -1,25 +1,14 @@
 {% load i18n %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{current_locale}}" lang="{{current_locale}}">
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# yasoundev: http://ogp.me/ns/fb/yasoundev#">
     <title>{% block head_title %}Home{% endblock %} — Yasound</title>
     <link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
 	<meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile." />
-
 	<meta name="Author" content="Yasound SAS" />
 	<meta name="copyright" content="Yasound SAS" />
 	<meta http-equiv="Cache-control" content="public" />
 	<meta name="language" content="french" />
-	<meta property="og:title" content="YASOUND : N'écoutez plus seul votre musique."/>
-	<meta property="og:type" content="Compagnie"/>
-	<meta property="og:url" content="http://yasound.com/fr"/>
-	<meta property="og:image" content="http://yasound.com/fr/og.jpg"/>
-	<meta property="og:site_name" content="YASOUND : Ma radio, c'est moi."/>
-	
-	<meta property="fb:admins" content="USER_ID"/>
-	<meta property="og:description"
-	      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
-
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/media/css/style.css"/>
 
