--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -10,6 +10,7 @@
   <meta property="og:url"    content="{{ request.build_absolute_uri }}" /> 
   <meta property="og:title"  content="{{ radio }}" /> 
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
+  <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
 {% endblock %}
 
 
