added facebook/twitter association/dissociation on settings page (not ajaxified yet)

--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -12,13 +12,42 @@
             {{ settings_facebook_form }}
             <div class="form-actions">
                 <input type='hidden' name='action' value='settings_facebook'/>
-                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+                <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
+                <button type="submit" name='remove' class="btn btn-danger">{% trans "Remove account" %}</button>
+            </div>
+        </form>
+        {% endif %}
+
+        {% if settings_twitter_form %}
+        <form id='settings-twitter-form' enctype="multipart/form-data" class='form-horizontal well' method='post'>{% csrf_token %}
+            {{ settings_twitter_form }}
+            <div class="form-actions">
+                <input type='hidden' name='action' value='settings_twitter'/>
+                <button type="submit" name='remove' class="btn btn-danger">{% trans "Remove account" %}</button>
             </div>
         </form>
         {% endif %}
 
         <form id='settings-user-form' enctype="multipart/form-data" class='form-horizontal well' method='post'>{% csrf_token %}
             {{ settings_user_form }}
+        {% if display_associate_facebook %}
+        <div class='control-group'>
+        <div class='controls'>
+        <a class="btn-auth btn-facebook large first" href="{% url socialauth_associate_begin 'facebook' %}?next={{ next }}" rel="nofollow">
+            {% trans 'Associate my facebook account' %}
+        </a>
+        </div>
+        </div>
+        {% endif %}
+        {% if display_associate_twitter %}
+        <div class='control-group'>
+        <div class='controls'>
+        <a class="btn-auth btn-twitter large" href="{% url socialauth_associate_begin 'twitter' %}?next={{ next }}" rel="nofollow">
+            {% trans 'Associate my twitter account' %}
+        </a>
+        </div>
+        </div>
+        {% endif %}
             <div class="form-actions">
                 <input type='hidden' name='action' value='settings_user'/>
                 <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
