added "most popular today"

--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -7,7 +7,7 @@
 
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>Selection</h2>
+        <h2>{% trans "Selection" %}</h2>
         <ul id='selected-radios'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
@@ -15,7 +15,7 @@
 </div>    
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>Most active radios</h2>
+        <h2>{% trans "Most popular radios today" %}</h2>
         <ul id='most-active-radios'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
@@ -23,7 +23,7 @@
 </div>
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>Favorites</h2>
+        <h2>{% trans "My favorites" %}</h2>
         <ul id='favorites'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
