--- a/yaapp/templates/yabase/app/home/homePage.html
+++ b/yaapp/templates/yabase/app/home/homePage.html
@@ -7,21 +7,21 @@
 
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>Selection</h2>
+        <h2>{% trans "Selection" %}</h2>
         <ul id='selected-radios'>
         </ul>
     </div>
 </div>    
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>Most active radios</h2>
+        <h2>{% trans "Most popular radios today" %}</h2>
         <ul id='most-active-radios'>
         </ul>
     </div>
 </div>
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>Favorites</h2>
+        <h2>{% trans "My favorites" %}</h2>
         <ul id='favorites'>
         </ul>
         <div class='cell-pagination' id='pagination'></div>
