trying mpeg for audio:type and play action

--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -11,7 +11,7 @@
   <meta property="og:title"  content="{{ radio }}" /> 
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
-  <meta property="og:audio:type" content="audio/vnd.facebook.bridge"/>
+  <meta property="og:audio:type" content="audio/mpeg" />
 {% endblock %}
 
 
