--- a/yaapp/templates/yabase/song.html
+++ b/yaapp/templates/yabase/song.html
@@ -6,12 +6,13 @@
 
 {% block fb_open_graph %}
   <meta property="fb:app_id" content="{{ FACEBOOK_APP_ID }}" /> 
-  <meta property="og:type"   content="song" /> 
+  <meta property="og:type"   content="{{ FACEBOOK_APP_NAMESPACE}}:song" /> 
   <meta property="og:url"    content="{{ request.build_absolute_uri }}" /> 
   <meta property="og:title"  content="{{ song }}" /> 
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
-  <meta property="og:audio:type" content="audio/vnd.facebook.bridge" />
+  <meta property="og:audio:type" content="audio/mpeg" />
+  <meta property="{{ FACEBOOK_APP_NAMESPACE}}:radio_station" content="{{ radio_url }}" />
 {% endblock %}
 
 
