fixed listening on song page

--- a/yaapp/templates/yabase/song.html
+++ b/yaapp/templates/yabase/song.html
@@ -12,7 +12,7 @@
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
   <meta property="og:audio:type" content="audio/mpeg" />
-  <meta property="{{ FACEBOOK_APP_NAMESPACE}}:radio_station" content="{{ radio_url }}" />
+  <meta property="{{ FACEBOOK_APP_NAMESPACE}}:radio_station" content="{{ radio_station_url }}" />
 {% endblock %}
 
 
