changed mimetype for audio type to application/mp3

--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -11,7 +11,7 @@
   <meta property="og:title"  content="{{ radio }}" /> 
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ request.build_absolute_uri }}" /> 
-  <meta property="og:audio:type" content="audio/mpeg" />
+  <meta property="og:audio:type" content="application/mp3" />
 {% endblock %}
 
 
