--- a/yaapp/templates/yabase/song.html
+++ b/yaapp/templates/yabase/song.html
@@ -11,7 +11,7 @@
   <meta property="og:title"  content="{{ song }}" /> 
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
-  <meta property="og:audio:type" content="audio/mpeg" />
+  <meta property="og:audio:type" content="application/mp3" />
   <meta property="{{ FACEBOOK_APP_NAMESPACE}}:radio_station" content="{{ radio_station_url }}" />
 {% endblock %}
 
