fixed missing fb:admins declaration

--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block head_title %}Home{% endblock %} — Yasound</title>
     <link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
 	<meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile." />
+    <meta property="fb:admins" content="USER_ID"/>
 	<meta name="Author" content="Yasound SAS" />
 	<meta name="copyright" content="Yasound SAS" />
 	<meta http-equiv="Cache-control" content="public" />
